theme_vauxoo/static/src/less/main.less
/* ... */
.fade-scale.in {
  opacity: 1;
}

/* blog related LESS*/

#blogs_carousel {
    max-height:70vh;
    position: absolute;
    width: 100%;
    top: 0px;
    left: 0px;
    .item {
        background-position: 50% 50%;
        background-repeat: no-repeat;
        background-size: cover;
        padding-top: 22vh;
        padding-bottom: 22vh;
        color: @vauxoo-white;
    }
}
.mtvh {
    margin-top: 60vh;
}
.blog-post-retina {
    .card-image {
            background-repeat: no-repeat;
            background-size: cover;
            min-height: 180px;
    }
    .bordered-div {
        min-height: 390px;
    }
    .padded-section {
        padding: 15px;
    }
    .blog-tag {
        background-color: @brand-primary;
        color: @vauxoo-white;
        top: 7px;
        font-size: 16px;
        padding: 6px;
        position: relative;
        &:hover {
            text-decoration: none;
        }
    }
}
.footer-subscribe {
    height: 250px;
    padding-top: 56px;
    input  {
        min-height:46px;
    }
}
/* Error pages */
.bg-error {
    background-image: url(/web/image/theme_vauxoo.doordonot);
    background-repeat: no-repeat;
    background-size: cover;
    color: @vauxoo-white;
    background-position: 50% 1%;
    padding-top: 15vh;
    h1 {
        font-size: 65px;
    }
    h2 {
        font-size: 55px;
    }
}

/* General LESS rules */

h1 {
    font-weight: 700;
    line-height: 1.18;
    font-size:55px
}
h2 {
    font-weight: 700;
    line-height: 1.36;
}
h2.underlined {
    &:before {
    content: "";
    position: absolute;
    width: 27px;
    height: 1px;
    bottom: 0;
    left: 49%;
    border-bottom: 3px solid @red-300;
    }
}
h3 {
    font-size: 22px;
    font-weight: 700;
    line-height: 1.36;
}
h3.underlined {
    &:before {
        content: "";
        position: absolute;
        margin-top: 5px;
        width: 27px;
        height: 1px;
        bottom: 0;
        left: 49%;
        border-bottom: 3px solid @red-300;
    }
}
.underlined-left {
    &:before {
        content: "";
        position: absolute;
        width: 27px;
        height: 1px;
        bottom: 0;
        border-bottom: 3px solid @red-300;
    }
}
.hx-thin {
    font-weight: 300;
}
p {
    line-height: 1.67;
    font-weight: 300;
}
.btn-lg {
    min-width: 172px;
    margin: 15px;
}

.bordered-div {
    border-radius: 4px;
    border: solid 1px @div-gray;
    padding-bottom: 16px;
    &:hover {
        background-color: @vauxoo-white;
        box-shadow: 0 2px 6px 3px @gray-300;
        box-shadow: 0 2px 6px 3px @gray-300;
    }
}
a {
    color: @link-gray;
    &:hover {
        color: @vauxoo-ruby;
        text-decoration: none;
    }
}

/* UNDERLINES */
hr.title {
    width: 27px;
    padding-bottom: 0px;
    padding-top: 3px;
    &.accent {
        background-color: @accent;
    }
    &.slow_yellow {
        background-color: @slow_yellow;
    }
    &.purple{
        background-color: @purple;
    }
    }
#cover_container {
    margin-top: 10vh;
    min-height: 70vh;
    color: white;
    .btn-secondary {
        border: 2px solid white;
        color: white;
    }
}
.bg-cream {
    background-color: @cream !important;
}
.btn-secondary {
        border: 2px solid white;
        color: white;
}
.btn-secondary-black {
        border: 2px solid black;
        color: black;
}
.diagonal-right {
    padding: 5% 20px; /* Added a percentage value for top/bottom padding to keep the wrapper inside of the parent */
    padding-bottom: 15%;
    -webkit-transform: skewY(-2deg);
    -moz-transform: skewY(-2deg);
    -ms-transform: skewY(-2deg);
    -o-transform: skewY(-2deg);
    transform: skewY(-2deg);
    .container {
      -webkit-transform: skewY(2deg);
      -moz-transform: skewY(2deg);
      -ms-transform: skewY(2deg);
      -o-transform: skewY(2deg);
      transform: skewY(2deg);
    }
#vauxoo_header {
  -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
  clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
}
.cover_container{
  -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
  clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
}
.btn-default {
    color: @disabling_grey;
    border: solid 1px @disabling_grey;
    font-weight: 500;
    border-radius: 3px;
    min-width: 110px;
    background-color: unset;
}

}
.diagonal-left {
    background: @vauxoo-white;
    position: relative;
    z-index: 1;
    padding: 5% 20px; /* Added a percentage value for top/bottom padding to keep the wrapper inside of the parent */
    padding-bottom: 10%;

  &:before,
  &:after {
    background: inherit;
    content: '';
    display: block;
    height: 50%;
    left: 0;
    position: absolute;
    right: 0;
    z-index: -1;
    -webkit-backface-visibility: hidden; // for Chrome Windows
  }

  &:before {
    top: 0;
    transform: skewY(2deg);
    transform-origin: 100% 0;
  }

  &:after {
    bottom: 0;
    transform: skewY(-2deg);
    transform-origin: 100%;
  }
}
.horizontal {
    padding: 5% 20px; /* Added a percentage value for top/bottom padding to keep the wrapper inside of the parent */

}
.btn-odoo {
    min-width: 125px;
    background-color: @odoo-purple;
    border-color: @odoo-purple;
    &:hover, &:active, &:focus {
        background-color: @odoo-purple * 0.75 !important;
        border-color: @odoo-purple !important;
    }
    &:focus {
        background-color: @odoo-purple * 0.85 !important;
        border-color: @odoo-purple !important;
    }
}
.arrow-scroll-down {
    padding-top: 30vh;
}
.nopadding {
    padding: 0px !important;
}
.nomargin {
    margin: 0px !important;
}

/* SUPER SPECIFIC CSS*/
#job-md-lg {
    .bordered-div{
        min-height: 450px;
    }
}
.line-extra-height {
    line-height: 1.88;
}
.text-red {
    color: @vauxoo-ruby !important;
}
.pad10perc {
    padding-top: 10% !important;
}
/* ... */

